# bajaj-hackathon-app

./: .gitignore  Dockerfile  README.md  docker.ignore  embedding_cache.py  ingest.py  pyproject.toml  requirements.txt
app/: embedder.py  main.py  query_engine.py  retriever.py
app/ingestion/: chunker.py  extractor.py
app/models/: document.py
